volexc/tests/ui/parse_missing_type.vol
// Missing type in struct field
struct Foo {
    bar:
}
